<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#ff310202"
	android:padding="20px"
	>

	<AutoCompleteTextView
		android:id="@+id/dependency_who_actv"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<Button
		android:id="@+id/dependency_continue_btn"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_width="140px"
		android:layout_centerHorizontal="true"
		android:text="@string/continueNew" />
	<Button
		android:id="@+id/dependency_add_another_btn"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_width="140px"
		android:layout_centerHorizontal="true"
		android:text="@string/add_another" />
	<Button
		android:id="@+id/dependency_exit_btn"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_width="140px"
		android:layout_centerHorizontal="true"
		android:text="@string/exit" />
	<ListView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@id/android:list"></ListView>
</RelativeLayout>
